# rumdl

./: .gitattributes  .gitignore  .lychee.toml  .mise.toml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .rumdl.toml  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  SPONSORS.md  action.yml  cliff.toml  clippy.toml  parity_check.py  pyproject.toml  rules.json  rumdl.schema.json  rumdl.toml  rumdl.toml.example  rust-toolchain.toml  vership.toml  zensical.toml
.cargo/: audit.toml
.config/: nextest.toml
.github/: FUNDING.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  build.yml  ci.yml  docs-prod-probe.yml  docs.yml  fuzz.yml  idempotency.yml  parity.yml  performance.yml  release.yml  sync-schemastore.yml  test-action.yml
benches/: fix_performance.rs  link_parsing_manual.rs  perf_audit.rs  range_performance.rs  range_utils_benchmark.rs  rule_performance.rs  simple_fix_bench.rs
docs/: .rumdl.toml  LINTCONTEXT_OPTIMIZATION_PLAN.md  LINTCONTEXT_OPTIMIZATION_SUMMARY.md  LINTCONTEXT_PERFORMANCE_ANALYSIS.md  PHASE_2_OPTIMIZATION_COMPLETE.md  PHASE_3_OPTIMIZATION_COMPLETE.md  RULES.md  _redirects  code-block-tools.md  comparison.md  flavors.md  global-settings.md  index.md  inline-configuration.md  link-validation.md  lsp.md  markdownlint-comparison.md  md001.md  md002.md  md003.md  md004.md  md005.md  md006.md  md007.md  md008.md  md009.md  md010.md  md011.md  md012.md  md013.md  md013_html_refactor_plan.md  md014.md  md015.md  md016.md  md017.md  md018.md  md019.md  md020.md  md021.md  md022.md  (+68 more)
docs/configuration/: index.md
docs/flavors/: gfm.md  hugo.md  kramdown.md  mdx.md  mkdocs.md  myst.md  obsidian.md  quarto.md  standard.md
docs/getting-started/: installation.md  quickstart.md
docs/usage/: ci-cd.md  cli.md  editors.md  pre-commit.md
examples/: google-style.rumdl.toml  profile_quadratic.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_config.rs  fuzz_context.rs  fuzz_differential.rs  fuzz_fix.rs  fuzz_fix_idempotency.rs  fuzz_lint.rs  fuzz_properties.rs  fuzz_structured.rs
issues/: plan-rule-parity-with-markdownlint.md
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-arm64/: package.json
npm/cli-linux-arm64-musl/: package.json
npm/cli-linux-x64/: package.json
npm/cli-linux-x64-musl/: package.json
npm/cli-win32-x64/: package.json
npm/rumdl/: README.md  package.json
proptest-regressions/rules/: formatter_proptest.txt  idempotency_pipeline.txt
proptest-regressions/utils/: text_reflow_test.txt
python/: MANIFEST.in  PYTHON-README.md
python/rumdl/: __init__.py  __main__.py
rumdl/: __init__.py  __main__.py
scripts/: benchmark_cold_start.py  bisect-performance.sh  check-rule-docs.py  check-versions.py  docs_smoke_test.py  extract-changelog.sh  gen_linguist_extensions.py  generate-downloads-table.sh  generate_benchmark_chart.py  mise-install.sh  parity.py  pre-release.sh  prepare-release.sh  rumdl-action.sh  setup-pre-commit.sh  setup-prek.sh  test_check_rule_docs.py  update-npm-versions.sh  update-pre-commit-docs.sh  update-used-by.py  verify-release-ready.sh
src/: cache.rs  check_runner.rs  cli_config_override.rs  cli_types.rs  cli_utils.rs  config.rs  config_intelligent_merge_tests.rs  discovery.rs  doc_comment_lint.rs  exit_codes.rs  file_processor.rs  filtered_lines.rs  fix_coordinator.rs  formatter.rs  init.rs  inline_config.rs  lib.rs  linguist_data.rs  lint_context.rs  main.rs  markdownlint_config.rs  parallel.rs  performance.rs  profiling.rs  python.rs  resolution.rs  rule.rs  rule_config.rs  rule_config_serde.rs  stdin_processor.rs  vscode.rs  wasm.rs  watch.rs  workspace_index.rs
src/code_block_tools/: config.rs  executor.rs  linguist.rs  mod.rs  processor.rs  registry.rs
src/commands/: check.rs  clean.rs  code_block_tools_docs.rs  completions.rs  config.rs  explain.rs  import.rs  init.rs  mod.rs  rule.rs  schema.rs  server.rs  version.rs  vscode.rs
src/config/: flavor.rs  global_keys.rs  loading.rs  mod.rs  parsers.rs  registry.rs  source_tracking.rs  tests.rs  types.rs  validation.rs
src/file_processor/: discovery.rs  doc_comments.rs  embedded.rs  mod.rs  processing.rs  tests.rs
src/lint_context/: element_parsers.rs  flavor_detection.rs  heading_detection.rs  line_computation.rs  link_parser.rs  list_blocks.rs  mod.rs  tests.rs  types.rs
src/lsp/: completion.rs  configuration.rs  index_worker.rs  linting.rs  mod.rs  navigation.rs  server.rs  symbols.rs  tests.rs  types.rs
src/output/: mod.rs
src/rules/: blockquote_utils.rs  code_block_utils.rs  code_fence_utils.rs  emphasis_style.rs  front_matter_utils.rs  heading_utils.rs  heading_utils_new.rs  list_utils.rs  md001_heading_increment.rs  md002_first_heading_h1.rs  (+97 more)
tests/: advanced_integration_tests.rs  cli_alias_test.rs  cli_duplication_test.rs  cli_explain_test.rs  cli_fail_on_test.rs  cli_flag_precedence_test.rs  cli_flavor_test.rs  cli_integration_tests.rs  cli_lsp_fix_consistency.rs  cli_respect_gitignore_test.rs  cli_statistics_test.rs  code_block_blockquote_edge_cases.rs  commonmark_compliance_test.rs  commonmark_compliance_tests.rs  comprehensive_integration_tests.rs  comprehensive_output_format_tests.rs  config_application_tests.rs  config_documentation_completeness.rs  config_file_command_test.rs  config_path_resolution_test.rs  config_style_normalization_test.rs  config_tests.rs  config_upward_traversal_test.rs  configuration_inheritance_tests.rs  consistency_regression_tests.rs  crlf_line_endings_test.rs  cross_file_validation_test.rs  cross_platform_compatibility_tests.rs  deeply_nested_lists_performance_test.rs  definition_list_reflow_test.rs  doc_comment_lint_tests.rs  escaped_brackets_test.rs  exclude_test.rs  exclude_with_explicit_paths_test.rs  final_confidence_assessment.rs  fix_counting_test.rs  fix_performance_baseline_test.rs  fixable_unfixable_config_test.rs  gfm_comprehensive_test.rs  html_comments_test.rs  (+93 more)
wasm-pkg/: README.md  package.json.tmpl
(+398 files in other folders)
